# advent-of-code2022

./: .gitignore  CMakeLists.txt  allHeaders.h  aoc1.cpp  aoc1.h  main.cpp
